<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pregunta4">


    <Button
        android:id="@+id/btnFinalizarQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnFinalizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714" />

    <Button
        android:id="@+id/buttonReiniciar4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/buttonReiniciar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714" />

    <RadioGroup
        android:layout_width="353dp"
        android:layout_height="193dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419"
        tools:ignore="MissingConstraints,TextSizeCheck">

        <RadioButton
            android:id="@+id/rbDarthTenebrous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbTenshinhan"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/rbDarthBane"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbKrillin"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/rbDarthPlagueis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbGoku"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/rbDarthValorum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbSatan"
            tools:ignore="VisualLintButtonSize" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvTituloPregunta4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTituloPregunta1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/tvPregunta4"
        android:layout_width="378dp"
        android:layout_height="58dp"
        android:text="@string/tvPregunta4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205"
        tools:ignore="TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>