<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pregunta1">

    <RadioGroup
        android:layout_width="353dp"
        android:layout_height="193dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419"
        tools:ignore="MissingConstraints,TextSizeCheck">

        <RadioButton
            android:id="@+id/rbDarthTenebrous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbDarthTenebrous"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/rbDarthBane"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbDarthBane"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/rbDarthPlagueis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbDarthPlagueis"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/rbDarthValorum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbDarthValorum"
            tools:ignore="VisualLintButtonSize" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonReiniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/buttonReiniciar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714" />

    <TextView
        android:id="@+id/tvTituloPregunta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTituloPregunta1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/tvPregunta1"
        android:layout_width="386dp"
        android:layout_height="52dp"
        android:text="@string/tvPregunta1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnPregunta2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSiguientePregunta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714" />
</androidx.constraintlayout.widget.ConstraintLayout>

